agrego readme actualizado